# tf_lessons

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
tests/: test_tf_lessons.py
tf_lessons/: __init__.py  lesson_1.py
